Add metadata endpoint
